# devspace

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  DESIGN.md  LICENSE  README.md  bootstrap.sh  config.yaml  default.nix  lefthook.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: bootstrap-osx.yaml  build-cask.yaml  build-codespace-agent.yaml  build-codespace-image.yaml  build-devbox.yaml  build-image.yaml  build-iso.yaml  ci-codespace.yaml  cleanup.yaml  deps-cuda.yaml  deps-gcc.yaml  deps-host-tools.yaml  deps-llvm.yaml  deps-podman.yaml  deps-python.yaml  deps-tensorflow.yaml  dist-image.yaml  pack-prebuilt.yaml  podman.yaml  pre-commit.yaml  prebuilt.yaml  prepack.yaml  test-linux.yaml  test-osx.yaml  upload-bottles.yaml
Casks/: freefilesync.rb
codespace/: DESIGN.md  USAGE.md  WEBGUI_DESIGN.md  __init__.py  shared.py
codespace/agent/: Dockerfile  __init__.py  __main__.py  app.py  build-agent.sh  config.py  containers.py  credentials.py  keys.py  operations.py  podman_exec.py  podman_ops.py  run-agent.sh  service.py
codespace/client/: __init__.py  __main__.py  config.py  github.py  gitlab.py  run.sh  service.py  ssh_config.py  (+4 more)
config/: config.yaml  setup.sh
docker/: README.md  build.sh
dotfiles/: config.yaml  setup.sh
images/base/stage/uv/conda/env/py3/: pyproject.toml
prebuilt/: common.sh  install.sh  pack-for-linux.sh  pack-for-macos.sh  setup-pipx.sh
sidecar/: stack.yaml
src/: main.py
tests/: test_agent_podman_ops.py  test_app.py  test_client_cli.py  test_client_config.py  test_client_github.py  test_client_web.py  test_keys.py  test_podman_ops.py  test_shared.py  test_ssh_config.py
tools/: add-license.sh  bundle.py  check-author.sh  crontab-runner.sh  dedup-bin.py  eza-wrapper.sh  find-dup-binaries-in-path.py  free-github-action-disk-space.sh  git-auto-commit.sh  git-auto-sync.sh  git-proxy-wrapper.sh  git-resolve-move-file.py  git-resolve-rm-file.py  install-vscode-ext.sh  ls  lsb_release  osx-fix-environment.sh  osx-hack.sh  profile-installer.sh  rime-update-dict.sh  xdg-open  zsh-analyze-fpath.py
(+652 files in other folders)
