[project]
name = "devspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.19.2",
]

[tool.ruff]
select = ["E", "F", "B", "Q", "I", "UP"]
line-length = 100
target-version = "py311"

[tool.ruff.per-file-ignores]

[tool.yapf]
based_on_style = "google"
column_limit = 100

[tool.black]
line-length = 100
target-version = ['py311']
