[project]
name = "py3"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "notion-client>=2.5.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.11.10",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "sqlmodel>=0.0.25",
    "typer>=0.19.2",
]
